--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,6 +31,10 @@
   .btn {
     @apply min-w-[156px] h-[54px] px-6 bg-accent hover:bg-accent-hover text-primary text-[13px] uppercase font-semibold tracking-[.15em] transition-all;
   }
+
+  video {
+    pointer-events: none;
+  }
 }
 
 /* swiper navigation arrows styles*/
